# appium-mcp

./: CHANGELOG.md  Dockerfile  README.md  README_python.md  app.py  cleanup_ts.sh  cli.py  config.json  docker-compose.yml  pyproject.toml  requirements.txt  start_automation.py
docs/: appium-mode.md  cost-estimation.md  deployment.md  ios-setup.md
src/: __init__.py  android.py  image_utils.py  ios.py  iphone_simulator.py  logger.py  main.py  png.py  robot.py  server.py  uiautomator2_server.py  webdriver_agent.py
tests/: test_android.py  test_ios.py  test_ios_coordinates.py  test_iphone_simulator.py  test_png.py  test_swipe.py
typescript_backup/src/: android.ts  ios.ts  iphone-simulator.ts  robot.ts  server.ts  webdriver-agent.ts
