[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-mcp"
version = "0.1.0"
description = "모바일 디바이스 제어를 위한 MCP 서버"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mobile MCP Team"},
]
dependencies = [
    "mcp>=0.1.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
sse = [
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]
all = [
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
mobile-mcp = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
